# python-project-83

./: .coverage  .env.example  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  ci.yml
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
page_analyzer/: app.py  db.py
page_analyzer/templates/: base.html  index.html
page_analyzer/templates/urls/: index.html  show.html
tests/: test_app.py  test_db.py  test_routes.py  test_utils.py
