[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "flask>=3.0.0",
    "gunicorn>=22.0.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "validators>=0.22.0",
]

[dependency-groups]
dev = [
    "playwright>=1.45.0",
    "pytest>=8.0.0",
    "pytest-playwright>=0.5.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["page_analyzer*"]

[tool.pytest.ini_options]
addopts = ["--import-mode=prepend"]

[tool.ruff]
line-length = 88
